--- a/FlowerVision/View/Base.lproj/Main.storyboard
+++ b/FlowerVision/View/Base.lproj/Main.storyboard
@@ -17,25 +17,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uo9-6s-p9A">
-                                <rect key="frame" x="0.0" y="162" width="414" height="700"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uo9-6s-p9A">
+                                <rect key="frame" x="53" y="446" width="202" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGf-mq-izQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGf-mq-izQ">
                                 <rect key="frame" x="70" y="88" width="274" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0hP-w7-HvH">
+                                <rect key="frame" x="53" y="166" width="202" height="217"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Uo9-6s-p9A" secondAttribute="trailing" id="2da-cI-73m"/>
-                            <constraint firstItem="Uo9-6s-p9A" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="CCd-P1-kun"/>
-                            <constraint firstItem="Uo9-6s-p9A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Db5-wg-s0a"/>
-                            <constraint firstItem="Uo9-6s-p9A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="qmr-Qe-uB1"/>
-                        </constraints>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="PV2-jd-1Fc">
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="arx-dj-3eE">
@@ -45,8 +44,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="centerImage" destination="Uo9-6s-p9A" id="BEy-9I-Y86"/>
                         <outlet property="flowerTitle" destination="DGf-mq-izQ" id="sSy-Gw-7hU"/>
+                        <outlet property="userImage" destination="Uo9-6s-p9A" id="BEy-9I-Y86"/>
+                        <outlet property="wikiImage" destination="0hP-w7-HvH" id="fND-Q7-m9J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -73,8 +73,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
