--- a/FlowerVision/View/Base.lproj/Main.storyboard
+++ b/FlowerVision/View/Base.lproj/Main.storyboard
@@ -76,12 +76,20 @@
                                     <constraint firstItem="uiO-Vr-c7T" firstAttribute="centerY" secondItem="4do-Nz-xSU" secondAttribute="centerY" id="zkD-j0-Qwb"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snap a Flower" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vx9-54-Vgq">
+                                <rect key="frame" x="62.5" y="265" width="289.5" height="56"/>
+                                <fontDescription key="fontDescription" name="Optima-Bold" family="Optima" pointSize="47"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.0078183103528407273" green="0.19632998075392488" blue="0.23955346075529904" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="vx9-54-Vgq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-155" id="4bQ-xj-lz1"/>
                             <constraint firstItem="4do-Nz-xSU" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4tp-kb-Z3D"/>
                             <constraint firstItem="0sY-5a-DaI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="EAl-fa-v9W"/>
+                            <constraint firstItem="vx9-54-Vgq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OGQ-QB-8um"/>
                             <constraint firstItem="0sY-5a-DaI" firstAttribute="top" secondItem="0hP-w7-HvH" secondAttribute="bottom" constant="10" id="QJk-DI-JO7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0hP-w7-HvH" secondAttribute="trailing" constant="10" id="WIS-Ri-bjz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0sY-5a-DaI" secondAttribute="trailing" constant="10" id="WhQ-bn-3RY"/>
@@ -107,6 +115,7 @@
                         <outlet property="centerCameraIcon" destination="uiO-Vr-c7T" id="meB-pJ-xcy"/>
                         <outlet property="flowerDescription" destination="0sY-5a-DaI" id="tVW-b4-ANs"/>
                         <outlet property="flowerTitle" destination="DGf-mq-izQ" id="sSy-Gw-7hU"/>
+                        <outlet property="introTitle" destination="vx9-54-Vgq" id="ilw-9O-OOi"/>
                         <outlet property="userImage" destination="Uo9-6s-p9A" id="BEy-9I-Y86"/>
                         <outlet property="wikiImage" destination="0hP-w7-HvH" id="fND-Q7-m9J"/>
                     </connections>
